# personal-rag-knowledge-base

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: config.yaml
docs/superpowers/plans/: 2026-06-21-personal-rag-v0.1.1.md  2026-06-21-personal-rag-v0.1.2.md  2026-06-21-personal-rag-v0.1.md
eval/: dataset.json
examples/docs/: rag_design.md  rag_notes.md  search_notes.txt
personal_rag/: __init__.py  cli.py  config.py
personal_rag/core/: __init__.py  hashing.py  metadata.py  schema.py
personal_rag/evaluation/: __init__.py  evaluator.py
personal_rag/ingest/: __init__.py  chunker.py  indexer.py  parsers.py  scanner.py
personal_rag/providers/: __init__.py  embeddings.py  generators.py
personal_rag/rag/: __init__.py  citations.py  context.py  fusion.py  pipeline.py  retriever.py
personal_rag/storage/: __init__.py  atomic.py  bm25_store.py  chunk_store.py  doc_store.py  embedding_cache.py  stats_store.py  vector_store.py
scripts/: generate_example_pdf.py
tests/: test_acceptance_cli.py  test_cli.py  test_config.py  test_release_metadata.py
tests/core/: test_hashing.py  test_metadata.py
tests/evaluation/: test_evaluator.py
tests/ingest/: test_chunker.py  test_indexer.py  test_parsers.py  test_scanner.py
tests/live/: test_modelscope.py
tests/providers/: test_embeddings.py  test_generators.py
tests/rag/: test_context_and_citations.py  test_fusion.py  test_pipeline.py
tests/storage/: test_bm25_store.py  test_stores.py  test_vector_store.py
(+3 files in other folders)
